creating minimalistic site

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta property="og:title" content="GoCoder">
     
     <meta name="twitter:card" content="summary">
-      <meta property="description" content="GoCoder, Go Software Developer, Golang Software Developer, Full Stack Web Developer, Back End Go Developer, Go CLI Tools, JamStack, Vue.js, Svelte, SvelteKit, MongoDB, Redis">
-      <meta property="og:description" content="GoCoder, Go Software Developer, Golang Software Developer, Full Stack Web Developer, Back End Go Developer, Go CLI Tools, JamStack, Vue.js, Svelte, SvelteKit, MongoDB, Redis">
+      <meta property="description" content="GoCoder, Sascha Monteiro, Go Software Developer, Golang Software Developer, Full Stack Web Developer, Back End Go Developer, Go CLI Tools, JamStack, Vue.js, Svelte, SvelteKit, MongoDB, Redis">
+      <meta property="og:description" content="GoCoder, Sascha Monteiro, Go Software Developer, Golang Software Developer, Full Stack Web Developer, Back End Go Developer, Go CLI Tools, JamStack, Vue.js, Svelte, SvelteKit, MongoDB, Redis">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="fonts.css" />
     
