creating minimalistic site

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   In my spare time I study towards CKAD (and possibly CKA) and run my homelab on a Raspberry PI 5 running k3s to get proficient with Kubernetes.
 </p>
 <br>
-<p><a  class="button is-link" href="https://us1.list-manage.com/contact-form?u=b9d2cc256de0bc1b4bed5e6a9&form_id=93a8c34a19727369175b3e5cbdc6bdd7" target="_blank">Leave me a message here</a></p>
+<p><a  class="button is-link" href="https://us1.list-manage.com/contact-form?u=b9d2cc256de0bc1b4bed5e6a9&form_id=93a8c34a19727369175b3e5cbdc6bdd7" target="_blank">I am availabe for freelance projects, leave me a message here</a></p>
 <h3 id="about-my-background">About my background</h3>
 <p>I graduated from Hogeschool van Utrecht in 2002 with a bachelor’s degree in Electronic Engineering & Telematics — an interdisciplinary program blending electronics, computer science, and telecommunications. My passion for technology led me to start developing software in 2001, and since then, I’ve gained extensive experience working with Cisco Unified Communications. I also held a CCIE-Voice certification between 2005 and 2011.</p>
   <footer>
