creating minimalistic site

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <header class="masthead">
       <h1><a href="/">GoCoder</a></h1>
       <p class="tagline">Go software development</p>
-      <p class="tagline">Devops</p>
-      <p class="tagline">Platform Engeering</p>
-      <p class="tagline">AWS (Lambda, Elastic Beanstalk)</p>
+      <p class="tagline">AWS (Lambda, Elastic Beanstalk, ElastiCache)</p>
+      <p class="tagline">VMware, Docker</p>
       <p class="tagline">Linux (OL, Ubuntu, Alpine)</p>
       <p class="tagline">Redis, Oracle, MongoDB, MySQL</p>
+      <p class="tagline">Github Actions, Jenkins</p>
       <p class="tagline">Svelte, Vue</p>
 
       <!--<nav class="menu">
@@ -72,11 +72,13 @@
 
 
 <p>
-  I'm Sascha Monteiro, a software engineer since 2009 and developing in Go since 2021. I have also been developing in Java and JS but they are mainly touched for maintenance of existing projects.<br/>
-  I am mostly developing back-end applications (cloud & on-prem), microservices and cli tools which are deployed to AWS as Lamda functions, Elastic Beanstalk on Docker or on-prem Linux servers that I build and manage. Front-end frameworks I have used are Vue and Svelte.
+  I’m Sascha Monteiro, a Software Engineer with over 15 years of experience. Since 2021, I have shifted my primary focus to Go, using it to build everything from cloud-native microservices to efficient CLI tools. While my roots are in Java and JavaScript, I now primarily utilize those for maintaining legacy systems. I am comfortable across the entire lifecycle of an application—from writing the logic to managing the Linux servers or AWS infrastructure (Lambda, Docker) where it lives.
 </p>
 <p>
-  In my spare time I study towards CKAD (and possibly CKA) and run my homelab on a Raspberry PI 5 running k3s to get proficient with Kubernetes.
+  For work I manage the internal infrastructure, provision Linux servers in VMware or Linux containers in Docker
+</p>
+<p>
+  Aspiring DevOps and Platform Engineer currently pursuing CKAD and CKA certifications. I maintain a dedicated homelab environment using a Raspberry Pi 5 and k3s, providing hands-on experience in cluster management and Kubernetes orchestration.
 </p>
 <br>
 <p><a  class="button is-link" href="https://us1.list-manage.com/contact-form?u=b9d2cc256de0bc1b4bed5e6a9&form_id=93a8c34a19727369175b3e5cbdc6bdd7" target="_blank">I am availabe for freelance projects, leave me a message here</a></p>
